# sudoku

./: .bandit  .coveragerc  .gitignore  .importlinter  .pre-commit-config.yaml  ConstraintList.md  Doxyfile  Makefile  README.md  build.xml  c  classes.dot  config.yaml  config_schema.py  constraints.csv  constraints.lp  coverage.xml  create_config_schema.py  design.txt  generated_config_schema.py  generated_config_schema2.py  glyph.css  mypy.ini  nose2-acceptance-tests.cfg  nose2-fpuzzles-tests.cfg  nose2-tests.cfg  nose2.cfg  out  packages.dot  pylintrc  pylintrc.template  pyproject.toml  qodana.yaml  radon.txt  report.html  requirements.txt  setup.py  t  test.csv  test.db  (+5 more)
.github/workflows/: pylint.yml
acceptance_tests/: test_226xnxuy.py  test_22asvbz2.py  test_22donmw2.py  test_22hhad2y.py  test_22hxp5to.py  test_22recwc3.py  test_22v4qr84.py  test_22xpqrkq.py  test_234ojuxe.py  test_23buk25n.py  test_23ndgmls.py  test_23r6buhw.py  test_23s4jb5o.py  test_23sn6r7w.py  test_23x6hppz.py  test_242tbxwo.py  test_2465kfr9.py  test_24fufvcr.py  test_24jv8ejv.py  test_24mntqwu.py  test_24na9cme.py  test_24o68m6o.py  test_24uesngb.py  test_255jn6me.py  test_256onkxo.py  test_2593kcxd.py  test_25km8gp6.py  test_25l3fkuo.py  test_25ttstt9.py  test_25zcwclq.py  test_26488va3.py  test_267t3ano.py  test_268jhbgh.py  test_26ed79b6.py  test_26pjo3b6.py  test_26r3ownj.py  test_26t78spn.py  test_273eq45b.py  test_27adqgz4.py  test_27cgxe2j.py  (+658 more)
documentation/: documentation.aux  documentation.tex  documentation.toc
gendocs/md/: Battenburg.md  Box.md  Boxes.md  Cell.md  CellReference.md  Column.md  Columns.md  ComposedItem.md  Constraints.md  DisjointGroup.md  DisjointGroups.md  EvenCell.md  FortressCell.md  FortressGreaterThanCell.md  FortressLessThanCell.md  HighCell.md  Item.md  Known.md  KnownCell.md  LowCell.md  MidCell.md  OddCell.md  Pair.md  Product.md  Region.md  RegionSet.md  Row.md  Rows.md  SimpleCellReference.md  SpecialRegion.md  StandardRegion.md  StandardRegionSet.md  UniqueRegion.md  VariablePair.md
gendocs/rst/: Battenburg.rst  Box.rst  Boxes.rst  Cell.rst  CellReference.rst  Column.rst  Columns.rst  ComposedItem.rst  Constraints.rst  DisjointGroup.rst  DisjointGroups.rst  EvenCell.rst  FortressCell.rst  FortressGreaterThanCell.rst  FortressLessThanCell.rst  HighCell.rst  Item.rst  Known.rst  KnownCell.rst  LowCell.rst  MidCell.rst  OddCell.rst  Pair.rst  Product.rst  Region.rst  RegionSet.rst  Row.rst  Rows.rst  SimpleCellReference.rst  SpecialRegion.rst  StandardRegion.rst  StandardRegionSet.rst  UniqueRegion.rst  VariablePair.rst
notes/: problem055.txt  times.csv
postponed/: convert.py  create_fpuzzles_json.py  generate_acceptance_tests.py  parser.py  pylint_report.py  sud.py
postponed/src/: xpulp_solver.py
problems/: problem001.yaml  problem002.yaml  problem003.yaml  problem004.yaml  problem005.yaml  problem006.yaml  problem007.yaml  problem008.yaml  problem009.yaml  problem010.yaml  problem011.yaml  problem012.yaml  problem013.yaml  problem014.yaml  problem015.yaml  problem016.yaml  problem018.yaml  problem020.yaml  problem021.yaml  problem022.yaml  problem023.yaml  problem024.yaml  problem025.yaml  problem026.yaml  problem027.yaml  problem028.yaml  problem029.yaml  problem030.yaml  problem031.yaml  problem032.yaml  problem033.yaml  problem034.yaml  problem036.yaml  problem037.yaml  problem038.yaml  problem039.yaml  problem040.yaml  problem041.yaml  problem042.yaml  problem043.yaml  (+38 more)
problems/easy/: 226xnxuy.yaml  22hhad2y.yaml  22hxp5to.yaml  22recwc3.yaml  22xpqrkq.yaml  234ojuxe.yaml  23ndgmls.yaml  24o68m6o.yaml  24uesngb.yaml  255jn6me.yaml  2593kcxd.yaml  25km8gp6.yaml  25ttstt9.yaml  26488va3.yaml  267t3ano.yaml  268jhbgh.yaml  26ed79b6.yaml  26r3ownj.yaml  26t78spn.yaml  27adqgz4.yaml  27q7zpmt.yaml  27v95t85.yaml  27yvnblw.yaml  2828oz3v.yaml  284qax3b.yaml  287jssnd.yaml  28c9ye3n.yaml  28m38r5l.yaml  28rowyxa.yaml  28spxy62.yaml  28tbxxas.yaml  28xs69du.yaml  29brzr7r.yaml  29nxkyd4.yaml  (+418 more)
sample_documentation/: box.yaml  column.yaml  row.yaml  standard.yaml
scripts/: convert.py  create_fpuzzles_json.py  doc_commands.py  doc_commands_parser.py  generate_acceptance_tests.py  generate_command_pydot.py  generate_config_schema.py  generate_documentation.py  generate_schema.py  init_generator.py  parser.py  pylint_report.py  solve.py  solve_parser.py  solve_process.py  sud.py
source/: anti.rst  arrow.rst  asterix.rst  between.rst  conf.py  consecutive.rst  design.rst  diagonal.rst  disjoint_groups.rst  formulations.rst  formulations.rst.bak  fortress.rst  frame.rst  girandola.rst  implementation.rst  index.rst  killer.rst  kropki.rst  libraries.rst  magic_square.rst  mountain.rst  numbered_room.rst  out  outside.rst  parity.rst  quadruple.rst  renban.rst  rossini.rst  sandwich.rst  standard.rst  sum_pair.rst  thermometer.rst  tools.rst  whispers.rst
src/: __init__.py
tests/: conftest.py  test_problems.py
tests-acceptance/: test_problems.py
tests.acceptance/: acceptance_test.py  run_acceptance_tests.py  validate_schemas.py  validate_schemas_one.py
(+2758 files in other folders)
