[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Variant Sudoku Solver"
authors = ["Nick Leaton <nickle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
PuLP = "2.9.0"
parameterized = "^0.8.1"
svgwrite = "^1.4.2"
jinja2 = "^3.1.4"
oyaml = "^1.0"

orloge = "^0.17.2"
strictyaml = "^1.6.1"
svglib = "^1.2.1"
pytest = "^8.3.3"
mypy = "^0.961"
pylint = "^2.13.7"
lxml = "^4.8.0"
pdoc = "^12.0.2"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
sphinx = "^5.0.2"
pandas = "^1.4.2"
tox = "^3.25.0"
perflint ="^0.7.1"
charset-normalizer = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.pylint]
max-args = 10
